--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "php": ">=5.4.0",
         "topthink/framework": "5.0.*",
         "topthink/think-captcha": "1.*",
-        "phpmailer/phpmailer": "^6.0"
+        "phpmailer/phpmailer": "^6.0",
+        "ext-redis": "*"
     },
     "autoload": {
         "psr-4": {
